infrastructure/base/kube-prometheus-stack/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-https-route
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: internal-https-gateway
      namespace: default
  hostnames:
    - grafana.internal.leomercier.dev
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
